게시판 상세보기 페이지 작성

--- a/ArticleAppBlazorWeb/appsettings.json
+++ b/ArticleAppBlazorWeb/appsettings.json
@@ -8,5 +8,27 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:/Repos/logs/log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
+
   "AllowedHosts": "*"
 }
