게시물 삭제 부트스트랩 모달창 이용

--- a/ArticleAppBlazorServer/appsettings.json
+++ b/ArticleAppBlazorServer/appsettings.json
@@ -22,7 +22,7 @@
         "Name": "File",
         "Args": {
           "path": "D:/Repos/logs/log.txt",
-          "rollingInterval": "Day"
+          "rollingInterval": "Hour"           //"Day\"",
         }
       }
     ]
