BmsPager 컴포넌트로 대체

--- a/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
+++ b/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ArticleApp.Models\ArticleApp.Models.csproj" />
+    <ProjectReference Include="..\BmsPager\BmsPager.csproj" />
   </ItemGroup>
 
 </Project>
