--- a/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
+++ b/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\BmsPager\BmsPager.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Notice\" />
+  </ItemGroup>
+
 </Project>
