--- a/ArticleApp.Models/ArticleApp.Models.csproj
+++ b/ArticleApp.Models/ArticleApp.Models.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UploadApp.Shared\UploadApp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
