--- a/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
+++ b/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="ChartJs.Blazor" Version="1.1.0" />
     <PackageReference Include="Dul" Version="1.3.3" />
+    <PackageReference Include="EPPlus" Version="7.7.0" />
     <PackageReference Include="MatBlazor" Version="2.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.14" />
@@ -36,6 +37,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\files\" />
+    <Folder Include="wwwroot\templates\" />
     <Folder Include="wwwroot\Upload\" />
   </ItemGroup>
 
