--- a/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
+++ b/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
@@ -40,6 +40,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Pages\Category\" />
+    <Folder Include="Views\Shared\" />
     <Folder Include="wwwroot\files\" />
     <Folder Include="wwwroot\templates\" />
     <Folder Include="wwwroot\Upload\" />
