08_01_Candidate List 페이지 만들기

--- a/ArticleAppBlazorServer/appsettings.json
+++ b/ArticleAppBlazorServer/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "StorageConnectionString1": "Storage String 1",
+
+  "BlobStroageConnectionString": {
+    "Site1": "Site 1 Storage String",
+    "Site2": "Site 2 Storage String"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ArticleApp;Trusted_Connection=True"
   },
@@ -22,7 +29,7 @@
         "Name": "File",
         "Args": {
           "path": "D:/Repos/logs/log.txt",
-          "rollingInterval": "Hour"           //"Day\"",
+          "rollingInterval": "Hour" //"Day\"",
         }
       }
     ]
