--- a/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
+++ b/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Pages\" />
     <Folder Include="Models\" />
     <Folder Include="wwwroot\files\" />
     <Folder Include="wwwroot\templates\" />
