--- a/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
+++ b/ArticleAppBlazorServer/ArticleAppBlazorServer.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Blazorise.Bootstrap" Version="1.7.6" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.7.6" />
     <PackageReference Include="ChartJs.Blazor" Version="1.1.0" />
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Dul" Version="1.3.3" />
     <PackageReference Include="EPPlus" Version="7.7.0" />
     <PackageReference Include="MatBlazor" Version="2.10.0" />
