37_03_ASP.NET Core 1.0 게시판 프로젝트 시작_3개 프로젝트 구성 및 DB와 클래스 라이브러리 프로젝트 생성

--- a/DotNetNote/appsettings.json
+++ b/DotNetNote/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DotNetNoteApp;Trusted_Connection=True;"
   },
+  //[16] 보조 연결 정보
+  "Data": {
+    "DefaultConnection": {
+      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=DotNetNoteApp;Integrated Security=True;"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
