--- a/DotNetNote/DotNetNote.csproj
+++ b/DotNetNote/DotNetNote.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
@@ -27,6 +28,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BmsPager\BmsPager.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\DotNetSale\Data\" />
+    <Folder Include="Controllers\VisualAcademy\" />
   </ItemGroup>
 
 </Project>
