--- a/DotNetNote/appsettings.json
+++ b/DotNetNote/appsettings.json
@@ -14,5 +14,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:/Repos/logs/log.txt",
+          "rollingInterval": "Hour" //"Day\"",
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
