폼 유효성 검사와 모델 바인딩 미리보기 실행 및 소스 다운로드 경로 소개

--- a/DotNetNote/DotNetNote.csproj
+++ b/DotNetNote/DotNetNote.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Folder Include="Areas\DotNetSale\Data\" />
     <Folder Include="Controllers\VisualAcademy\" />
+    <Folder Include="Views\FormValidationDemo\" />
   </ItemGroup>
 
 </Project>
