37_06_상세, 댓글 입출력, 수정, 삭제, 답변 페이지 완성 및 DotNetNote 게시판 프로젝트(설치형) 강좌 완료

--- a/DotNetNote/appsettings.json
+++ b/DotNetNote/appsettings.json
@@ -33,5 +33,15 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  // ========================== ▼ 전용 설정 시작 ▼ ==========================
+  //[15] 사이트 설정
+  //"DotNetNoteSettings": {
+  //  "SiteName": "DotNetNote",
+  //  "SiteAdmin": "Admin"
+  //}
+
+  //[21] 대칭 암호화 키
+  "SymmetricSecurityKey": "DotNetNote1234567890"
 }
