05_00_01_카테고리, 상품, 고객 관련 SQL 스크립트 정리

--- a/ArticleApp.Models/ArticleApp.Models.csproj
+++ b/ArticleApp.Models/ArticleApp.Models.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\UploadApp.Shared\UploadApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Categories\CategoryBases\" />
+  </ItemGroup>
+
 </Project>
