10_03_ChartJs_MatBlazor_DulPager 등의 NuGet 패키지를 사용 가능하도록 _Host 페이지에 리소스 적용

--- a/Hawaso/Hawaso.csproj
+++ b/Hawaso/Hawaso.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ChartJs.Blazor" Version="1.1.0" />
     <PackageReference Include="MatBlazor" Version="2.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
