--- a/Hawaso.Cookies/appsettings.json
+++ b/Hawaso.Cookies/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Hawaso.Cookies-63b1d265-d178-43e5-a027-7f083a8d889d;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ArticleApp;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
