--- a/Hawaso/Hawaso.csproj
+++ b/Hawaso/Hawaso.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Toast" Version="4.2.1" />
     <PackageReference Include="ChartJs.Blazor" Version="1.1.0" />
+    <PackageReference Include="EPPlus" Version="7.7.0" />
     <PackageReference Include="MatBlazor" Version="2.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
@@ -30,12 +32,14 @@
 	  <PackageReference Include="SendGrid" Version="9.29.3" />
 	  <PackageReference Include="Serilog" Version="4.2.0" />
 	  <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
-	  <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />	  
+	  <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />	  
 	  
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ArticleApp.Models\ArticleApp.Models.csproj" />
+    <ProjectReference Include="..\BlazorUtils\BlazorUtils.csproj" />
     <ProjectReference Include="..\BmsPager\BmsPager.csproj" />
   </ItemGroup>
 
